--- a/apps/academy/templates/add_academy_course.html
+++ b/apps/academy/templates/add_academy_course.html
@@ -38,7 +38,13 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <h5 class="card-header">Add New Course</h5>
+       <div class="card-header d-flex justify-content-between align-items-center">
+         <h5 class="mb-0">{% if is_edit %} Edit Course {% else %} Tambah Course {% endif %}</h5>
+         <a href="{% url 'list-academy-course' %}" class="btn btn-outline-secondary btn-sm">
+            <i class="ri-arrow-go-back-line me-1"></i> Kembali
+         </a>
+      </div>
+
       <div class="card-body">
         
         <form method="post" novalidate>
