--- a/apps/academy/templates/course_attendance.html
+++ b/apps/academy/templates/course_attendance.html
@@ -27,7 +27,7 @@
     <div class="card mb-6">
       <div class="card-header d-flex justify-content-between align-items-center">
          <h5 class="mb-0">Informasi Agenda</h5>
-         <a href="{% url 'add-course-agenda' course.id %}" class="btn btn-outline-secondary btn-sm">
+         <a href="{% url 'add-course-agenda' course.uuid %}" class="btn btn-outline-secondary btn-sm">
             <i class="ri-arrow-go-back-line me-1"></i> Kembali
          </a>
       </div>
