--- a/apps/academy/templates/grading_assignment.html
+++ b/apps/academy/templates/grading_assignment.html
@@ -17,7 +17,7 @@
                 <i class="ri-award-line me-1"></i> Max Score: <strong>{{ assignment.max_score }}</strong>
             </div>
         </div>
-        <a href="{% url 'manage-curriculum' course.id %}" class="btn btn-outline-secondary">
+        <a href="{% url 'manage-curriculum' course.uuid %}" class="btn btn-outline-secondary">
             <i class="ri-arrow-left-line me-1"></i> Kembali
         </a>
     </div>
